# tensorflow-rs

./: Cargo.toml  README.org  build.rs
src/: ffi.rs  lib.rs  tf.rs
